--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,21 @@
 [JANEAPP.COM]
 user=alexflores.ind@gmail.com
-password=BmFy3117
+password=123456.*
 
 
 [INF-TO-PROCESS]
 #Account-to-process
 account=Pacific Blue Cross
 ##FROM
-from_day=2nd
-from_month=November
+from_day=1st
+from_month=August
 from_year=2022
 
 ##TO
-to_day=2nd
-to_month=November
+to_day=10th
+to_month=August
 to_year=2022
 
 #To see process write yes / no
 [SCREEN]
-available_to_view=no
+available_to_view=yes
