--- a/config.ini
+++ b/config.ini
@@ -8,14 +8,16 @@ password=123456.*
 account=Pacific Blue Cross
 ##FROM
 from_day=1st
-from_month=August
-from_year=2022
+from_month=April
+from_year=2021
 
 ##TO
 to_day=10th
-to_month=August
-to_year=2022
+to_month=June
+to_year=2021
 
 #To see process write yes / no
 [SCREEN]
 available_to_view=yes
+#If the driver is deprecated please download from this page
+#https://chromedriver.chromium.org/downloads
